prevent darkening of overlapping headline borders

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -226,7 +226,7 @@
     border: 1px solid @border-default;
     border-right-color: transparent !important;
     border-left-color: transparent !important;
-    background-color: transparent;
+    background-color: @default-bg;
   }
 
   .cdm.expandable:not(.active),
